--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="com.example.buk"
     android:versionCode="1"
     android:versionName="1.0" >
+
     <uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -59,6 +60,14 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.buk.ListView"
+            android:label="@string/title_activity_list_view"
+            android:parentActivityName="com.example.buk.ViewListsActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.buk.ViewListsActivity" />
         </activity>
     </application>
 
