--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,10 +18,12 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.buk.MainActivity"
-            android:label="" >
+            android:label=""
+            android:screenOrientation="portrait"
+   			android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+        
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -96,7 +98,9 @@
         <activity
             android:name="com.example.buk.SearchForBookActivity"
             android:label="Search For Book"
-            android:parentActivityName="com.example.buk.SearchForBookActivity" >
+            android:parentActivityName="com.example.buk.SearchForBookActivity"
+            android:screenOrientation="portrait"
+		   	android:configChanges="orientation|keyboardHidden" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.buk.MainMenuActivity" />
